fix: increase left margin for body for better layout spacing

--- a/app/Vehicle/static/css/vehicle.css
+++ b/app/Vehicle/static/css/vehicle.css
@@ -81,7 +81,7 @@ body {
   font-size: 12px;
   font-style:oblique;
   font-weight: bold;
-  margin-left: 50px;
+  margin-left: 80px;
 }
 .dark-mode .vehicle-info a {
   color: #ccc;
